--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,11 @@
 @import './base.css';
 
 #app {
-  max-width: 1920px;
   margin: 0 auto;
+  max-width: 1920px;
   font-weight: normal;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
 
 @media (min-width: 1024px) {
 }
