--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   max-width: 1920px;
   font-weight: normal;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
 @media (min-width: 1024px) {
